--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -29,5 +29,6 @@
         </tbody>
     </table>
     <a th:href="@{/users/add}">新しいユーザーを追加</a>
+    <a th:href="@{/users/aggregate}">総得点一覧</a>
 </body>
 </html>
